manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-backend-v1
spec:
  selector:
    matchLabels:
      app: movie-backend
      version: v1
  template:
    metadata:
      labels:
        app: movie-backend
        version: v1
    spec:
      containers:
        - name: movie-backend
          image: sayedimran/istio-sample-app-backend:v1.0.1
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-backend-v2
spec:
  selector:
    matchLabels:
      app: movie-backend
      version: v2
  template:
    metadata:
      labels:
        app: movie-backend
        version: v2
    spec:
      containers:
        - name: movie-backend
          image: sayedimran/istio-sample-app-backend:v1.0.1
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: movie-backend
  labels:
    app: movie-backend
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: movie-backend
  type: ClusterIP

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: movie-backend
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /api/
          headers:
            X-username:
              exact: Imran
      rewrite:
        uri: /
      route:
        - destination:
            host: movie-backend
            subset: v2
    - match:
        - uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            host: movie-backend
            subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: movie-backend
spec:
  host: movie-backend
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
